--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.task-wrapper {
+  width:500px;
+  border: 1px solid black;
+  margin:50px;
+  padding:25px;
+  background-color: #eaeff3;
+}
