--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,15 @@ code {
     monospace;
 }
 
+.task-box{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  color: #010101;
+  flex-wrap: 'wrap';
+}
 .task-wrapper {
   width:500px;
   border: 1px solid black;
