--- a/src/components/friendList/FriendItem.module.css
+++ b/src/components/friendList/FriendItem.module.css
@@ -3,11 +3,13 @@
     margin:5px;
     /* borderShadow:'1px solid gray', */
     padding:2px;
-    padding-left: 15px;
+    padding-left: 10px;
+    font-size: 75%;
+    width: 7.5em;
 }
 
-.image{
-    height:50px;
-    width:50px;
-    padding:2px 10px;
+.avatar-image{
+    height: 40px;
+    width: 40px;
+    padding: 2px 10px;
 }
