--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 }
 
 .task-box{
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,7 +24,7 @@ code {
   flex-wrap: 'wrap';
 }
 .task-wrapper {
-  width:500px;
+  /* width:500px; */
   border: 1px solid black;
   margin:50px;
   padding:25px;
